@@ -37,6 +37,8 @@
    -  if the difference of 2 labels ( at least one is a forward reference ) is
       used as operand for another op ( shift ), error 'constant is expected'
       may have occured; see forward9.asm.
+   -  option -pe: binary without relocations got too long because the (empty)
+      .reloc section wasn't removed; see pe12.asm.
 
    Other changes:
    -  option -pe: allow imports by number; see pe10.asm.
